--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #b54533;
+  background-color: #e0533d;
 }
 
 nav {
@@ -15,7 +15,7 @@ header, main, footer {
 }
 
 main {
-	background-color: #b73f2e;
+	background-color: #d14d38;
 	border-top: 1px solid #fff;
 	border-bottom: 1px solid #fff;
 	padding-bottom: 40px;
