2nd Commit of 08/14/2022
So anyways I decided to continue working
...and I finished the schedule page!!
So I think the website is good enough for presentation?? May have to proofread this and show someone to give advice (cough color scheme)
But I think we're ready to show this at the info meeting!!

--- a/style.css
+++ b/style.css
@@ -115,3 +115,15 @@ h2 {
     text-align: start !important;
     text-align-last: start !important;
 }
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+}
